--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
-*{
+* {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
 
-body{
- background:#250057 ; 
+body {
+  background: #250057;
 }
 
-.input-box{
+.input-box {
   background: #fff;
   width: 90%;
   max-width: 500px;
@@ -20,17 +20,16 @@ body{
   align-items: center;
 }
 
-.input-box input{
+.input-box input {
   width: 100%;
   padding: 10px 0;
   border: 0;
   outline: 0;
   font-size: 24px;
   color: #555;
-
 }
 
-.input-box img{
+.input-box span {
   width: 35px;
   cursor: pointer;
 }
